--- a/configs/xsections.yaml
+++ b/configs/xsections.yaml
@@ -2,6 +2,10 @@ TTTo2L2Nu_TuneCP5_13TeV-powheg-pythia8:
   xsec: 88.29
   br  : 1.0
   kr  : 1.0
+TTTo2L2Nu_TuneCP5_PSweights_13TeV-powheg-pythia8:
+  xsec: 88.29
+  br  : 1.0
+  kr  : 1.0
 WWTo2L2Nu_NNPDF31_TuneCP5_13TeV-powheg-pythia8:
   xsec: 11.08
   br  : 1.0
@@ -166,3 +170,23 @@ WZTo3LNu_3Jets_MLL-50_TuneCP5_13TeV-madgraphMLM-pythia8:
   xsec: 0.09545
   br  : 1.109
   kr  : 1.20
+WZTo3LNu_0Jets_MLL-4to50_TuneCP5_13TeV-madgraphMLM-pythia8:
+  xsec: 2.50836
+  br  : 1.0
+  kr  : 1.0
+WZTo3LNu_1Jets_MLL-4to50_TuneCP5_13TeV-madgraphMLM-pythia8:
+  xsec: 0.48728
+  br  : 1.0
+  kr  : 1.0
+WZTo3LNu_2Jets_MLL-4to50_TuneCP5_13TeV-madgraphMLM-pythia8:
+  xsec: 0.16390
+  br  : 1.0
+  kr  : 1.0
+WZTo3LNu_3Jets_MLL-4to50_TuneCP5_13TeV-madgraphMLM-pythia8:
+  xsec: 0.07123
+  br  : 1.0
+  kr  : 1.0
+WWTo2L2Nu_NNPDF31_TuneCP5_PSweights_13TeV-powheg-pythia8:
+  xsec: 12.17766469464
+  br  : 1.0
+  kr  : 1.0
